+ fix auto resize by remove fixed value from input expanded in project.component
+ fix styling for scrollbar sidenav using flexbox , know how absoulute
  work with flex, overflow-y: auto

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,1 +1,17 @@
 @import './core/styles/custom.scss';
+
+#app-frame {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+app-project {
+    @apply flex;
+    flex-grow: 1;
+    flex-direction: column;
+    min-height: 0;
+}
